// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vaults.v3.controller GET /vaults/harvests error cases returns a 400 for invalid chain 1`] = `
Object {
  "errors": Array [],
  "message": "Query param address invalid",
  "name": "Error",
  "status": 400,
}
`;

exports[`vaults.v3.controller GET /vaults/harvests success cases Return extended harvests for chain vault by addr 1`] = `Array []`;

exports[`vaults.v3.controller GET /vaults/list with a specified chain returns the requested vaults 1`] = `
Array [
  Object {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "apr": Object {
      "baseYield": 8.26,
      "grossYield": 8.26,
      "maxGrossYield": 8.26,
      "maxYield": 8.26,
      "minGrossYield": 8.26,
      "minYield": 8.26,
      "sources": Array [
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "boostable": false,
          "chain": "ethereum",
          "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_emission_badger_rewards_flat",
          "name": "Badger Rewards",
          "performance": Object {
            "baseYield": 4.13,
            "grossYield": 4.13,
            "maxGrossYield": 4.13,
            "maxYield": 4.13,
            "minGrossYield": 4.13,
            "minYield": 4.13,
          },
          "type": "emission",
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "boostable": false,
          "chain": "ethereum",
          "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_lp_fee_curve_lp_fees_flat",
          "name": "Curve LP Fees",
          "performance": Object {
            "baseYield": 4.13,
            "grossYield": 4.13,
            "maxGrossYield": 4.13,
            "maxYield": 4.13,
            "minGrossYield": 4.13,
            "minYield": 4.13,
          },
          "type": "lp_fee",
        },
      ],
    },
    "apy": Object {
      "baseYield": 12.39,
      "grossYield": 12.39,
      "maxGrossYield": 12.39,
      "maxYield": 12.39,
      "minGrossYield": 12.39,
      "minYield": 12.39,
      "sources": Array [
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "boostable": false,
          "chain": "ethereum",
          "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_compound_vault_compounding_flat",
          "name": "Vault Compounding",
          "performance": Object {
            "baseYield": 4.13,
            "grossYield": 4.13,
            "maxGrossYield": 4.13,
            "maxYield": 4.13,
            "minGrossYield": 4.13,
            "minYield": 4.13,
          },
          "type": "compound",
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "boostable": false,
          "chain": "ethereum",
          "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_emission_badger_rewards_flat",
          "name": "Badger Rewards",
          "performance": Object {
            "baseYield": 4.13,
            "grossYield": 4.13,
            "maxGrossYield": 4.13,
            "maxYield": 4.13,
            "minGrossYield": 4.13,
            "minYield": 4.13,
          },
          "type": "emission",
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "boostable": false,
          "chain": "ethereum",
          "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_lp_fee_curve_lp_fees_flat",
          "name": "Curve LP Fees",
          "performance": Object {
            "baseYield": 4.13,
            "grossYield": 4.13,
            "maxGrossYield": 4.13,
            "maxYield": 4.13,
            "minGrossYield": 4.13,
            "minYield": 4.13,
          },
          "type": "lp_fee",
        },
      ],
    },
    "asset": "BADGER",
    "available": 93.04307958110472,
    "balance": 160912.73437961238,
    "behavior": "Compounder",
    "boost": Object {
      "enabled": false,
      "weight": 0,
    },
    "bouncer": "none",
    "lastHarvest": 1656606946,
    "name": "Badger",
    "pricePerFullShare": 1,
    "protocol": "Badger",
    "state": "open",
    "strategy": Object {
      "address": "0x98Ca7AFa876f0e15494E76E92C5b3658cdE1Ffe1",
      "aumFee": 0,
      "performanceFee": 0,
      "strategistFee": 0,
      "withdrawFee": 10,
    },
    "tokens": Array [
      Object {
        "address": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
        "balance": 52,
        "decimals": 18,
        "name": "Badger",
        "symbol": "BADGER",
        "value": 43628,
      },
    ],
    "type": "native",
    "underlyingToken": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    "value": 1116121.18,
    "vaultAsset": "bBADGER",
    "vaultToken": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "version": "v1",
    "yieldProjection": Object {
      "harvestApr": 87.2303490113956,
      "harvestPeriodApr": 85.49874329115687,
      "harvestPeriodApy": 85.49874329115687,
      "harvestPeriodSources": Array [
        Object {
          "address": "0x37d9D2C6035b744849C15F1BFEE8F268a20fCBd8",
          "apr": 32.82373833278737,
          "balance": 0.018280194542284356,
          "decimals": 18,
          "name": "Badger Sett Aura BAL",
          "symbol": "bauraBAL",
          "value": 0.33014014755695575,
        },
        Object {
          "address": "0xBA485b556399123261a5F9c95d413B4f93107407",
          "apr": 52.6750049583695,
          "balance": 0.16880331684143357,
          "decimals": 18,
          "name": "Gravitationally Bound AURA",
          "symbol": "graviAURA",
          "value": 0.5298035748764367,
        },
      ],
      "harvestPeriodSourcesApy": Array [
        Object {
          "address": "0x37d9D2C6035b744849C15F1BFEE8F268a20fCBd8",
          "apr": 32.82373833278737,
          "balance": 0.018280194542284356,
          "decimals": 18,
          "name": "Badger Sett Aura BAL",
          "symbol": "bauraBAL",
          "value": 0.33014014755695575,
        },
        Object {
          "address": "0xBA485b556399123261a5F9c95d413B4f93107407",
          "apr": 52.6750049583695,
          "balance": 0.16880331684143357,
          "decimals": 18,
          "name": "Gravitationally Bound AURA",
          "symbol": "graviAURA",
          "value": 0.5298035748764367,
        },
      ],
      "harvestTokens": Array [
        Object {
          "address": "0x37d9D2C6035b744849C15F1BFEE8F268a20fCBd8",
          "apr": 33.48853004787101,
          "balance": 5.577820766058746,
          "decimals": 18,
          "name": "Badger Sett Aura BAL",
          "symbol": "bauraBAL",
          "value": 100.73539242119963,
        },
        Object {
          "address": "0xBA485b556399123261a5F9c95d413B4f93107407",
          "apr": 53.741818963524594,
          "balance": 51.5067859780214,
          "decimals": 18,
          "name": "Gravitationally Bound AURA",
          "symbol": "graviAURA",
          "value": 161.65843096071896,
        },
      ],
      "harvestValue": 262.3938233819186,
      "id": "ethereum-0xf8f5677B6bCecdb9be94AE8f6770a05a6C53C378",
      "nonHarvestApr": 2.7184717983165343,
      "nonHarvestApy": 4.169165121397824,
      "nonHarvestSources": Array [
        Object {
          "apr": 2.7184717983165343,
          "boostable": false,
          "maxApr": 2.7184717983165343,
          "minApr": 2.7184717983165343,
          "name": "Balancer LP Fees",
          "performance": Object {
            "baseYield": 2.7184717983165343,
            "grossYield": 2.7184717983165343,
            "maxGrossYield": 2.7184717983165343,
            "maxYield": 2.7184717983165343,
            "minGrossYield": 2.7184717983165343,
            "minYield": 2.7184717983165343,
          },
        },
      ],
      "nonHarvestSourcesApy": Array [
        Object {
          "apr": 1.4506933230812897,
          "boostable": false,
          "maxApr": 1.4506933230812897,
          "minApr": 1.4506933230812897,
          "name": "Vault Flywheel",
          "performance": Object {
            "baseYield": 1.4506933230812897,
            "grossYield": 1.4506933230812897,
            "maxGrossYield": 1.4506933230812897,
            "maxYield": 1.4506933230812897,
            "minGrossYield": 1.4506933230812897,
            "minYield": 1.4506933230812897,
          },
        },
        Object {
          "apr": 2.7184717983165343,
          "boostable": false,
          "maxApr": 2.7184717983165343,
          "minApr": 2.7184717983165343,
          "name": "Balancer LP Fees",
          "performance": Object {
            "baseYield": 2.7184717983165343,
            "grossYield": 2.7184717983165343,
            "maxGrossYield": 2.7184717983165343,
            "maxYield": 2.7184717983165343,
            "minGrossYield": 2.7184717983165343,
            "minYield": 2.7184717983165343,
          },
        },
      ],
      "yieldApr": 87.44271335314028,
      "yieldPeriodApr": 85.70691220139402,
      "yieldPeriodSources": Array [
        Object {
          "address": "0xba100000625a3754423978a60c9317c58a424e3D",
          "apr": 33.03190724302428,
          "balance": 0.046596620481658135,
          "decimals": 18,
          "name": "Balancer",
          "symbol": "BAL",
          "value": 0.3322339040342225,
        },
        Object {
          "address": "0xC0c293ce456fF0ED870ADd98a0828Dd4d2903DBF",
          "apr": 52.67500495836974,
          "balance": 0.17660119162547971,
          "decimals": 18,
          "name": "Aura",
          "symbol": "AURA",
          "value": 0.5298035748764391,
        },
      ],
      "yieldTokens": Array [
        Object {
          "address": "0xba100000625a3754423978a60c9317c58a424e3D",
          "apr": 33.700894389615684,
          "balance": 14.217979855824007,
          "decimals": 18,
          "name": "Balancer",
          "symbol": "BAL",
          "value": 101.37419637202517,
        },
        Object {
          "address": "0xC0c293ce456fF0ED870ADd98a0828Dd4d2903DBF",
          "apr": 53.741818963524594,
          "balance": 53.88614365357299,
          "decimals": 18,
          "name": "Aura",
          "symbol": "AURA",
          "value": 161.65843096071896,
        },
      ],
      "yieldValue": 263.03262733274414,
    },
  },
]
`;

exports[`vaults.v3.controller GET /vaults/list with an invalid specified chain returns a 400 1`] = `
Object {
  "errors": Array [],
  "message": "invalid is not a supported chain",
  "name": "BAD_REQUEST",
  "status": 400,
}
`;

exports[`vaults.v3.controller GET /vaults/list with no specified chain returns eth vaults 1`] = `
Array [
  Object {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "apr": Object {
      "baseYield": 8.26,
      "grossYield": 8.26,
      "maxGrossYield": 8.26,
      "maxYield": 8.26,
      "minGrossYield": 8.26,
      "minYield": 8.26,
      "sources": Array [
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "boostable": false,
          "chain": "ethereum",
          "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_emission_badger_rewards_flat",
          "name": "Badger Rewards",
          "performance": Object {
            "baseYield": 4.13,
            "grossYield": 4.13,
            "maxGrossYield": 4.13,
            "maxYield": 4.13,
            "minGrossYield": 4.13,
            "minYield": 4.13,
          },
          "type": "emission",
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "boostable": false,
          "chain": "ethereum",
          "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_lp_fee_curve_lp_fees_flat",
          "name": "Curve LP Fees",
          "performance": Object {
            "baseYield": 4.13,
            "grossYield": 4.13,
            "maxGrossYield": 4.13,
            "maxYield": 4.13,
            "minGrossYield": 4.13,
            "minYield": 4.13,
          },
          "type": "lp_fee",
        },
      ],
    },
    "apy": Object {
      "baseYield": 12.39,
      "grossYield": 12.39,
      "maxGrossYield": 12.39,
      "maxYield": 12.39,
      "minGrossYield": 12.39,
      "minYield": 12.39,
      "sources": Array [
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "boostable": false,
          "chain": "ethereum",
          "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_compound_vault_compounding_flat",
          "name": "Vault Compounding",
          "performance": Object {
            "baseYield": 4.13,
            "grossYield": 4.13,
            "maxGrossYield": 4.13,
            "maxYield": 4.13,
            "minGrossYield": 4.13,
            "minYield": 4.13,
          },
          "type": "compound",
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "boostable": false,
          "chain": "ethereum",
          "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_emission_badger_rewards_flat",
          "name": "Badger Rewards",
          "performance": Object {
            "baseYield": 4.13,
            "grossYield": 4.13,
            "maxGrossYield": 4.13,
            "maxYield": 4.13,
            "minGrossYield": 4.13,
            "minYield": 4.13,
          },
          "type": "emission",
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "boostable": false,
          "chain": "ethereum",
          "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_lp_fee_curve_lp_fees_flat",
          "name": "Curve LP Fees",
          "performance": Object {
            "baseYield": 4.13,
            "grossYield": 4.13,
            "maxGrossYield": 4.13,
            "maxYield": 4.13,
            "minGrossYield": 4.13,
            "minYield": 4.13,
          },
          "type": "lp_fee",
        },
      ],
    },
    "asset": "BADGER",
    "available": 93.04307958110472,
    "balance": 160912.73437961238,
    "behavior": "Compounder",
    "boost": Object {
      "enabled": false,
      "weight": 0,
    },
    "bouncer": "none",
    "lastHarvest": 1656606946,
    "name": "Badger",
    "pricePerFullShare": 1,
    "protocol": "Badger",
    "state": "open",
    "strategy": Object {
      "address": "0x98Ca7AFa876f0e15494E76E92C5b3658cdE1Ffe1",
      "aumFee": 0,
      "performanceFee": 0,
      "strategistFee": 0,
      "withdrawFee": 10,
    },
    "tokens": Array [
      Object {
        "address": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
        "balance": 52,
        "decimals": 18,
        "name": "Badger",
        "symbol": "BADGER",
        "value": 43628,
      },
    ],
    "type": "native",
    "underlyingToken": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    "value": 1116121.18,
    "vaultAsset": "bBADGER",
    "vaultToken": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "version": "v1",
    "yieldProjection": Object {
      "harvestApr": 87.2303490113956,
      "harvestPeriodApr": 85.49874329115687,
      "harvestPeriodApy": 85.49874329115687,
      "harvestPeriodSources": Array [
        Object {
          "address": "0x37d9D2C6035b744849C15F1BFEE8F268a20fCBd8",
          "apr": 32.82373833278737,
          "balance": 0.018280194542284356,
          "decimals": 18,
          "name": "Badger Sett Aura BAL",
          "symbol": "bauraBAL",
          "value": 0.33014014755695575,
        },
        Object {
          "address": "0xBA485b556399123261a5F9c95d413B4f93107407",
          "apr": 52.6750049583695,
          "balance": 0.16880331684143357,
          "decimals": 18,
          "name": "Gravitationally Bound AURA",
          "symbol": "graviAURA",
          "value": 0.5298035748764367,
        },
      ],
      "harvestPeriodSourcesApy": Array [
        Object {
          "address": "0x37d9D2C6035b744849C15F1BFEE8F268a20fCBd8",
          "apr": 32.82373833278737,
          "balance": 0.018280194542284356,
          "decimals": 18,
          "name": "Badger Sett Aura BAL",
          "symbol": "bauraBAL",
          "value": 0.33014014755695575,
        },
        Object {
          "address": "0xBA485b556399123261a5F9c95d413B4f93107407",
          "apr": 52.6750049583695,
          "balance": 0.16880331684143357,
          "decimals": 18,
          "name": "Gravitationally Bound AURA",
          "symbol": "graviAURA",
          "value": 0.5298035748764367,
        },
      ],
      "harvestTokens": Array [
        Object {
          "address": "0x37d9D2C6035b744849C15F1BFEE8F268a20fCBd8",
          "apr": 33.48853004787101,
          "balance": 5.577820766058746,
          "decimals": 18,
          "name": "Badger Sett Aura BAL",
          "symbol": "bauraBAL",
          "value": 100.73539242119963,
        },
        Object {
          "address": "0xBA485b556399123261a5F9c95d413B4f93107407",
          "apr": 53.741818963524594,
          "balance": 51.5067859780214,
          "decimals": 18,
          "name": "Gravitationally Bound AURA",
          "symbol": "graviAURA",
          "value": 161.65843096071896,
        },
      ],
      "harvestValue": 262.3938233819186,
      "id": "ethereum-0xf8f5677B6bCecdb9be94AE8f6770a05a6C53C378",
      "nonHarvestApr": 2.7184717983165343,
      "nonHarvestApy": 4.169165121397824,
      "nonHarvestSources": Array [
        Object {
          "apr": 2.7184717983165343,
          "boostable": false,
          "maxApr": 2.7184717983165343,
          "minApr": 2.7184717983165343,
          "name": "Balancer LP Fees",
          "performance": Object {
            "baseYield": 2.7184717983165343,
            "grossYield": 2.7184717983165343,
            "maxGrossYield": 2.7184717983165343,
            "maxYield": 2.7184717983165343,
            "minGrossYield": 2.7184717983165343,
            "minYield": 2.7184717983165343,
          },
        },
      ],
      "nonHarvestSourcesApy": Array [
        Object {
          "apr": 1.4506933230812897,
          "boostable": false,
          "maxApr": 1.4506933230812897,
          "minApr": 1.4506933230812897,
          "name": "Vault Flywheel",
          "performance": Object {
            "baseYield": 1.4506933230812897,
            "grossYield": 1.4506933230812897,
            "maxGrossYield": 1.4506933230812897,
            "maxYield": 1.4506933230812897,
            "minGrossYield": 1.4506933230812897,
            "minYield": 1.4506933230812897,
          },
        },
        Object {
          "apr": 2.7184717983165343,
          "boostable": false,
          "maxApr": 2.7184717983165343,
          "minApr": 2.7184717983165343,
          "name": "Balancer LP Fees",
          "performance": Object {
            "baseYield": 2.7184717983165343,
            "grossYield": 2.7184717983165343,
            "maxGrossYield": 2.7184717983165343,
            "maxYield": 2.7184717983165343,
            "minGrossYield": 2.7184717983165343,
            "minYield": 2.7184717983165343,
          },
        },
      ],
      "yieldApr": 87.44271335314028,
      "yieldPeriodApr": 85.70691220139402,
      "yieldPeriodSources": Array [
        Object {
          "address": "0xba100000625a3754423978a60c9317c58a424e3D",
          "apr": 33.03190724302428,
          "balance": 0.046596620481658135,
          "decimals": 18,
          "name": "Balancer",
          "symbol": "BAL",
          "value": 0.3322339040342225,
        },
        Object {
          "address": "0xC0c293ce456fF0ED870ADd98a0828Dd4d2903DBF",
          "apr": 52.67500495836974,
          "balance": 0.17660119162547971,
          "decimals": 18,
          "name": "Aura",
          "symbol": "AURA",
          "value": 0.5298035748764391,
        },
      ],
      "yieldTokens": Array [
        Object {
          "address": "0xba100000625a3754423978a60c9317c58a424e3D",
          "apr": 33.700894389615684,
          "balance": 14.217979855824007,
          "decimals": 18,
          "name": "Balancer",
          "symbol": "BAL",
          "value": 101.37419637202517,
        },
        Object {
          "address": "0xC0c293ce456fF0ED870ADd98a0828Dd4d2903DBF",
          "apr": 53.741818963524594,
          "balance": 53.88614365357299,
          "decimals": 18,
          "name": "Aura",
          "symbol": "AURA",
          "value": 161.65843096071896,
        },
      ],
      "yieldValue": 263.03262733274414,
    },
  },
]
`;

exports[`vaults.v3.controller GET /vaults/list/harvests error cases returns a 400 for invalid chain 1`] = `
Object {
  "errors": Array [],
  "message": "invalid is not a supported chain",
  "name": "BAD_REQUEST",
  "status": 400,
}
`;

exports[`vaults.v3.controller GET /vaults/list/harvests success cases Return extended harvest for chain vaults 1`] = `
Object {
  "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28": Array [],
}
`;

exports[`vaults.v3.controller GET /vaults/snapshots error cases returns a 400 for invalid chain 1`] = `
Object {
  "errors": Array [],
  "message": "invalid is not a supported chain",
  "name": "BAD_REQUEST",
  "status": 400,
}
`;

exports[`vaults.v3.controller GET /vaults/snapshots error cases returns a 400 for invalid timestamps 1`] = `
Object {
  "errors": Array [],
  "message": "Query param timestamps invalid",
  "name": "Error",
  "status": 400,
}
`;

exports[`vaults.v3.controller GET /vaults/snapshots error cases returns a 400 for missed vault address param 1`] = `
Object {
  "errors": Array [],
  "message": "Query param vault invalid",
  "name": "Error",
  "status": 400,
}
`;

exports[`vaults.v3.controller GET /vaults/snapshots success cases return 200 and vaults snapshots for all dates, without duplications 1`] = `
Array [
  Object {
    "address": "0x937B8E917d0F36eDEBBA8E459C5FB16F3b315551",
    "apr": 36.42043576354977,
    "available": 93.04307958110472,
    "balance": 160912.73437961238,
    "block": 15291696,
    "boostWeight": 0,
    "chain": "ethereum",
    "grossApr": 41.88350112808223,
    "harvestApr": 36.42043576354977,
    "id": "ethereum-0x937B8E917d0F36eDEBBA8E459C5FB16F3b315551",
    "pricePerFullShare": 1,
    "ratio": 1,
    "strategy": Object {
      "address": "0x98Ca7AFa876f0e15494E76E92C5b3658cdE1Ffe1",
      "aumFee": 0,
      "performanceFee": 0,
      "strategistFee": 0,
      "withdrawFee": 10,
    },
    "strategyBalance": 160819.69130003126,
    "timestamp": 1645103004000,
    "totalSupply": 160912.73437961238,
    "value": 1137078.69,
    "yieldApr": 36.42043576354977,
  },
  Object {
    "address": "0x937B8E917d0F36eDEBBA8E459C5FB16F3b315551",
    "apr": 36.058699370488235,
    "available": 227.79837966012852,
    "balance": 159193.72047228398,
    "block": 15285176,
    "boostWeight": 0,
    "chain": "ethereum",
    "grossApr": 41.46750427606147,
    "harvestApr": 36.058699370488235,
    "id": "ethereum-0x937B8E917d0F36eDEBBA8E459C5FB16F3b315551",
    "pricePerFullShare": 1,
    "ratio": 1,
    "strategy": Object {
      "address": "0x98Ca7AFa876f0e15494E76E92C5b3658cdE1Ffe1",
      "aumFee": 0,
      "performanceFee": 0,
      "strategistFee": 0,
      "withdrawFee": 10,
    },
    "strategyBalance": 158965.92209262386,
    "timestamp": 1645015261000,
    "totalSupply": 159193.72047228398,
    "value": 1128118.19,
    "yieldApr": 36.058699370488235,
  },
  Object {
    "address": "0x937B8E917d0F36eDEBBA8E459C5FB16F3b315551",
    "apr": 36.18786526089967,
    "available": 227.79837966012852,
    "balance": 159193.72047228398,
    "block": 15278533,
    "boostWeight": 0,
    "chain": "ethereum",
    "grossApr": 41.616045050034614,
    "harvestApr": 0.006305366586500938,
    "id": "ethereum-0x937B8E917d0F36eDEBBA8E459C5FB16F3b315551",
    "pricePerFullShare": 1,
    "ratio": 1,
    "strategy": Object {
      "address": "0x98Ca7AFa876f0e15494E76E92C5b3658cdE1Ffe1",
      "aumFee": 0,
      "performanceFee": 0,
      "strategistFee": 0,
      "withdrawFee": 10,
    },
    "strategyBalance": 158965.92209262386,
    "timestamp": 1644928124000,
    "totalSupply": 159193.72047228398,
    "value": 1097323.6,
    "yieldApr": 0.006305366586500938,
  },
]
`;

exports[`vaults.v3.controller GET /vaults/snapshots success cases return 200 with 1 relevant vault and 2 old snapshots 1`] = `
Array [
  Object {
    "address": "0x937B8E917d0F36eDEBBA8E459C5FB16F3b315551",
    "apr": 36.42043576354977,
    "available": 93.04307958110472,
    "balance": 160912.73437961238,
    "block": 15291696,
    "boostWeight": 0,
    "chain": "ethereum",
    "grossApr": 41.88350112808223,
    "harvestApr": 36.42043576354977,
    "id": "ethereum-0x937B8E917d0F36eDEBBA8E459C5FB16F3b315551",
    "pricePerFullShare": 1,
    "ratio": 1,
    "strategy": Object {
      "address": "0x98Ca7AFa876f0e15494E76E92C5b3658cdE1Ffe1",
      "aumFee": 0,
      "performanceFee": 0,
      "strategistFee": 0,
      "withdrawFee": 10,
    },
    "strategyBalance": 160819.69130003126,
    "timestamp": 1645189933000,
    "totalSupply": 160912.73437961238,
    "value": 1137078.69,
    "yieldApr": 36.42043576354977,
  },
  Object {
    "address": "0x937B8E917d0F36eDEBBA8E459C5FB16F3b315551",
    "apr": 36.058699370488235,
    "available": 227.79837966012852,
    "balance": 159193.72047228398,
    "block": 15285176,
    "boostWeight": 0,
    "chain": "ethereum",
    "grossApr": 41.46750427606147,
    "harvestApr": 36.058699370488235,
    "id": "ethereum-0x937B8E917d0F36eDEBBA8E459C5FB16F3b315551",
    "pricePerFullShare": 1,
    "ratio": 1,
    "strategy": Object {
      "address": "0x98Ca7AFa876f0e15494E76E92C5b3658cdE1Ffe1",
      "aumFee": 0,
      "performanceFee": 0,
      "strategistFee": 0,
      "withdrawFee": 10,
    },
    "strategyBalance": 158965.92209262386,
    "timestamp": 1634821933000,
    "totalSupply": 159193.72047228398,
    "value": 1128118.19,
    "yieldApr": 36.058699370488235,
  },
  Object {
    "address": "0x937B8E917d0F36eDEBBA8E459C5FB16F3b315551",
    "apr": 36.18786526089967,
    "available": 227.79837966012852,
    "balance": 159193.72047228398,
    "block": 15278533,
    "boostWeight": 0,
    "chain": "ethereum",
    "grossApr": 41.616045050034614,
    "harvestApr": 0.006305366586500938,
    "id": "ethereum-0x937B8E917d0F36eDEBBA8E459C5FB16F3b315551",
    "pricePerFullShare": 1,
    "ratio": 1,
    "strategy": Object {
      "address": "0x98Ca7AFa876f0e15494E76E92C5b3658cdE1Ffe1",
      "aumFee": 0,
      "performanceFee": 0,
      "strategistFee": 0,
      "withdrawFee": 10,
    },
    "strategyBalance": 158965.92209262386,
    "timestamp": 1634821931000,
    "totalSupply": 159193.72047228398,
    "value": 1097323.6,
    "yieldApr": 0.006305366586500938,
  },
]
`;

exports[`vaults.v3.controller GET /vaults/snapshots success cases return 200 with empty array, got unmatched data 1`] = `Array []`;
